<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.myapplication.model.IcePortion" />

        <variable
            name="orderMenu"
            type="com.example.myapplication.model.OrderMenu" />

        <variable
            name="isShowTemp"
            type="Boolean" />

        <variable
            name="isShowCaffeine"
            type="Boolean" />

        <variable
            name="isShowIce"
            type="Boolean" />

        <variable
            name="isSmallPortion"
            type="Boolean" />

        <variable
            name="isMediumPortion"
            type="Boolean" />

        <variable
            name="isLargePortion"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTemp"
            android:textSize="20sp"
            android:textStyle="bold"
            bind:isVisible="@{isShowTemp}" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            bind:isVisible="@{isShowTemp}" />

        <RadioGroup
            android:id="@+id/tempGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/bg_divider_radio_group"
            android:orientation="horizontal"
            android:showDividers="middle"
            bind:isVisible="@{isShowTemp}">

            <RadioButton
                android:id="@+id/tempHot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/hot"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{orderMenu.isHot}"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/tempIce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/ice"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{!orderMenu.isHot}" />
        </RadioGroup>

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            bind:isVisible="@{isShowTemp}" />

        <TextView
            android:id="@+id/caffeineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isDeCaffeine"
            android:textSize="20sp"
            android:textStyle="bold"
            bind:isVisible="@{isShowCaffeine}" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            bind:isVisible="@{isShowCaffeine}" />

        <RadioGroup
            android:id="@+id/caffeineGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/bg_divider_radio_group"
            android:orientation="horizontal"
            android:showDividers="middle"
            bind:isVisible="@{isShowCaffeine}">

            <RadioButton
                android:id="@+id/caffeine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/caffeine"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{orderMenu.isCaffeine}" />

            <RadioButton
                android:id="@+id/deCaffeine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/deCaffeine"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{!orderMenu.isCaffeine}"
                tools:checked="true" />
        </RadioGroup>

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            bind:isVisible="@{isShowCaffeine}" />

        <TextView
            android:id="@+id/iceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice_portion"
            android:textSize="20sp"
            android:textStyle="bold"
            bind:isVisible="@{isShowIce}" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            bind:isVisible="@{isShowIce}" />

        <RadioGroup
            android:id="@+id/iceGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/bg_divider_radio_group"
            android:orientation="horizontal"
            android:showDividers="middle"
            bind:isVisible="@{isShowIce}">

            <RadioButton
                android:id="@+id/iceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/small"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{isSmallPortion}" />

            <RadioButton
                android:id="@+id/iceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/medium"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{isMediumPortion}"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/iceLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/large"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                bind:checked="@{isLargePortion}" />
        </RadioGroup>

    </LinearLayout>
</layout>